apollo-router/tests/integration/snapshots/integration_tests__integration__redis_response_cache__entity_cache_basic-3.snap
---
source: apollo-router/tests/integration/redis_response_cache.rs
expression: data
---
{
  "reviews": [
    {
      "body": "I can sit on it"
    }
  ]
}
