apollo-router/tests/integration/snapshots/integration_tests__integration__redis_response_cache__entity_cache_basic-7.snap
---
source: apollo-router/tests/integration/redis_response_cache.rs
expression: data
---
{
  "topProducts": [
    {
      "__typename": "Product",
      "upc": "1",
      "name": "chair"
    },
    {
      "__typename": "Product",
      "upc": "2",
      "name": "table"
    },
    {
      "__typename": "Product",
      "upc": "3",
      "name": "plate"
    }
  ]
}
