apollo-router/tests/integration/snapshots/integration_tests__integration__redis_response_cache__entity_cache_basic.snap
---
source: apollo-router/tests/integration/redis_response_cache.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it"
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it"
          },
          {
            "body": "I can sit on it2"
          }
        ]
      },
      {
        "name": "plate",
        "reviews": [
          {
            "body": "I can sit on it"
          },
          {
            "body": "I can sit on it2"
          },
          {
            "body": "I can sit on it3"
          }
        ]
      }
    ]
  },
  "extensions": {
    "apolloCacheDebugging": {
      "version": "1.0",
      "data": [
        {
          "key": "version:1.0:subgraph:products:type:Query:hash:6422a4ef561035dd94b357026091b72dca07429196aed0342e9e32cc1d48a13f:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
          "invalidationKeys": [],
          "kind": {
            "rootFields": [
              "topProducts"
            ]
          },
          "subgraphName": "products",
          "subgraphRequest": {
            "query": "{ topProducts { __typename upc name } }"
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 60,
            "public": true
          },
          "data": {
            "data": {
              "topProducts": [
                {
                  "__typename": "Product",
                  "upc": "1",
                  "name": "chair"
                },
                {
                  "__typename": "Product",
                  "upc": "2",
                  "name": "table"
                },
                {
                  "__typename": "Product",
                  "upc": "3",
                  "name": "plate"
                }
              ]
            }
          }
        },
        {
          "key": "version:1.0:subgraph:reviews:type:Product:entity:72bafad9ffe61307806863b13856470e429e0cf332c99e5b735224fb0b1436f7:representation::hash:3cede4e233486ac841993dd8fc0662ef375351481eeffa8e989008901300a693:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
          "invalidationKeys": [],
          "kind": {
            "typename": "Product",
            "entityKey": {
              "upc": "1"
            }
          },
          "subgraphName": "reviews",
          "subgraphRequest": {
            "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { reviews { body } } } }",
            "variables": {
              "representations": [
                {
                  "upc": "1",
                  "__typename": "Product"
                },
                {
                  "upc": "2",
                  "__typename": "Product"
                },
                {
                  "upc": "3",
                  "__typename": "Product"
                }
              ]
            }
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 10,
            "public": true
          },
          "data": {
            "data": {
              "reviews": [
                {
                  "body": "I can sit on it"
                }
              ]
            }
          }
        },
        {
          "key": "version:1.0:subgraph:reviews:type:Product:entity:472484d4df9e800bbb846447c4c077787860c4c9ec59579d50009bfcba275c3b:representation::hash:3cede4e233486ac841993dd8fc0662ef375351481eeffa8e989008901300a693:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
          "invalidationKeys": [],
          "kind": {
            "typename": "Product",
            "entityKey": {
              "upc": "2"
            }
          },
          "subgraphName": "reviews",
          "subgraphRequest": {
            "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { reviews { body } } } }",
            "variables": {
              "representations": [
                {
                  "upc": "1",
                  "__typename": "Product"
                },
                {
                  "upc": "2",
                  "__typename": "Product"
                },
                {
                  "upc": "3",
                  "__typename": "Product"
                }
              ]
            }
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 10,
            "public": true
          },
          "data": {
            "data": {
              "reviews": [
                {
                  "body": "I can sit on it"
                },
                {
                  "body": "I can sit on it2"
                }
              ]
            }
          }
        },
        {
          "key": "version:1.0:subgraph:reviews:type:Product:entity:080fc430afd3fb953a05525a6a00999226c34436466eff7ace1d33d004adaae3:representation::hash:3cede4e233486ac841993dd8fc0662ef375351481eeffa8e989008901300a693:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
          "invalidationKeys": [],
          "kind": {
            "typename": "Product",
            "entityKey": {
              "upc": "3"
            }
          },
          "subgraphName": "reviews",
          "subgraphRequest": {
            "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { reviews { body } } } }",
            "variables": {
              "representations": [
                {
                  "upc": "1",
                  "__typename": "Product"
                },
                {
                  "upc": "2",
                  "__typename": "Product"
                },
                {
                  "upc": "3",
                  "__typename": "Product"
                }
              ]
            }
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 10,
            "public": true
          },
          "data": {
            "data": {
              "reviews": [
                {
                  "body": "I can sit on it"
                },
                {
                  "body": "I can sit on it2"
                },
                {
                  "body": "I can sit on it3"
                }
              ]
            }
          }
        }
      ]
    }
  }
}
