apollo-router/tests/integration/snapshots/integration_tests__integration__redis_response_cache__entity_cache_with_nested_field_set-2.snap
---
source: apollo-router/tests/integration/redis_response_cache.rs
expression: data
---
{
  "data": {
    "allProducts": [
      {
        "name": "Test",
        "createdBy": {
          "__typename": "User",
          "email": "test@test.com",
          "country": {
            "a": "France"
          }
        }
      }
    ]
  },
  "cache_control": {
    "created": 0,
    "maxAge": 86400,
    "public": true
  }
}
